--- a/AdminDashboard1/web/style.css
+++ b/AdminDashboard1/web/style.css
@@ -4,13 +4,14 @@
 	font-family: Century Gothic;
 }
 body{
-	background-image: url(100.jpg);
+	background-image: url(1000.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
 	box-sizing: border-box;
 }
 .navbar{
+        background-color: rgb(85, 103, 208);
 	height: 12%;
 	display: flex;
 	align-items: center;
@@ -22,7 +23,7 @@ body{
     width: 150px;
     height: auto;
 }
-nav{
+nav{    
 	flex: 1;
 	text-align: right;
 	margin-top: 50px;
